<resources>
    <string name="app_name">WhatsUpApp</string>
    <string name="event_View">Events</string>
    <string name="name_View">Name:</string>
    <string name="date_View">Date:</string>
    <string name="time_View">Time:</string>
    <string name="location_View">Location:</string>
    <string name="description_View">Description:</string>
    <string name="add_Event_Button">Add Event</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recurrence_explainer_msg1">Would you like this event to recur weekly (every Tuesday, for example), or monthly (second saturday of the month, for example)? </string>
    <string name="recurrence_explainer_msg2">How many weeks would you like to skip? For example, 1 if the event is being held biweekly. </string>
    <string name="recurrence_explainer_msg3">How many more times would you like for this event to occur? </string>
    <string name="post_explainer_in_profile">This user\'s posts: </string>
    <!-- for authentication screen -->
    <string name="welcome_label">Welcome to NextGenPos!</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="register_button">Register</string>
    <string name="signin_button">Sign in</string>
    <string name="registration_success_msg">Registration successful. Please sign in now.</string>
    <string name="user_already_exists_msg">Registration failed. Username already exists.</string>
    <string name="invalid_credentials_msg">Signin failed. Invalid credentials.</string>

</resources>